# yichi-alpha

./: .gitignore  LICENSE  README.md
.github/: README.md
.github/workflows/: build.yml
checkpoints/: model_iter0.pt  model_iter1.pt  model_iter2.pt  model_iter3.pt
configs/: default.yaml  quick.yaml  ultra_fast.yaml
docs/: 01_rules_formalization.md  02_feature_planes.md  03_network_architecture.md  04_mcts_adaptation.md  05_training_pipeline.md  06_engine_design.md
engine/: CMakeLists.txt
engine/include/: board.h  mcts.h  neuralnet.h  rules.h
engine/src/: board.cpp  mcts.cpp  neuralnet.cpp  rules.cpp  selfplay_main.cpp
python/: compare_rules.py  dataset.py  debug_predict.py  eval_progression.py  evaluate.py  export_for_cpp.py  game.py  load_cpp_data.py  mcts.py  model.py  play.py  requirements.txt  selfplay.py  test_game.py  train.py
scripts/: build_engine.sh  cpp_train_pipeline.sh  run_eval.sh  run_train.sh  verify_rules_vs_js.js
